--- a/frontend/hima-chal/src/components/pages/Driveruicss.css
+++ b/frontend/hima-chal/src/components/pages/Driveruicss.css
@@ -1,29 +1,32 @@
-.row {
-    background-color: white;
-    padding: 20px;
-    border-radius: 30px;
-}
-
-.row-up {
-    height: 55vh;
-    width: 50%;
-
-}
-
 /* .btn-add{
     color: white;
 } */
-.row-dwn {
-    margin-top: 0px;
-    width: 50%;
-}
-
 .cont-1 {
-    background-color: rgb(39, 39, 39, 0.9);
-    height: 1000px;
+    margin-top: -7%;
+    background: #000000;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.map-api-call {
-    height: 100vh;
-    width: 50%;
+.fc {
+    background-color: rgba(83, 80, 80, 0.5);
+    border: 2px solid rgba(52, 51, 51, 0.5);
+    color: rgb(187, 186, 186);
+    font-weight: bold;
+    border-radius: 15px;
+}
+
+.textt1 {
+    color: whitesmoke;
+    font-size: large;
+    font-weight: bold;
+}
+
+.rcw {
+    background-color: rgb(139, 139, 139, 0.3);
+    padding:2%;
+    border-radius: 20px;
 }
