--- a/frontend/hima-chal/src/components/pages/Userrideuicss.css
+++ b/frontend/hima-chal/src/components/pages/Userrideuicss.css
@@ -1,20 +1,31 @@
 .cont {
-    background-color: rgba(39, 39, 39, 0.9);
+    background: #000000;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    margin-top: -9%;
 }
 
 .la1 {
-    color: rgb(0, 0, 0);
     font-family: sans-serif;
     font-weight: 3vh;
     font-weight: bolder;
 }
-.col1{
-    background-color: rgb(55, 53, 53);
-    height:20vh;
-}
-.map{
 
-    width:100%;
-    height:60vh;
-    border:0px;
+.col1 {
+    background-color: rgba(56, 55, 55, 0.5);
+    border:2px solid rgba(27, 27, 27, 0.5);
+    color:rgb(187, 186, 186);
+    font-weight: bold;
+    border-radius: 15px;
+    
+}
+
+.map {
+
+    width: 100%;
+    height: 60vh;
+    border: 0px;
 }
